description du rapport et retour sur les changements du client pour test

--- a/Rapport.tex
+++ b/Rapport.tex
@@ -1,1 +1,22 @@
-Un rapport au format PDF de 5 pages environ (sans compter les annexes éventuelles). Dans le rapport, on prendra soin de décrire les fonctionnalités implémentées ainsi que le protocole réseau mis en oeuvre.
+\documentclass{article}
+
+\usepackage[T1]{fontenc} 
+\usepackage[utf8]{inputenc}
+\usepackage[francais]{babel}
+
+
+\title{Rapport mini projet, Réseaux}
+\author{author}
+
+\maketitle
+
+\begin{abstract}
+    Un rapport au format PDF de 5 pages environ (sans compter les annexes éventuelles). Dans le rapport, on prendra soin de décrire les fonctionnalités implémentées ainsi que le protocole réseau mis en oeuvre.
+\end{abstract}
+\\
+\tableofcontents
+\\
+
+\section{Protocole Réseaux mis en oeuvre}
+
+\section{Fonctionnalités implémentés}
